# six_pages_voice

./: .gitattributes  LICENSE  README.md  codemagic.yaml  pubspec.yaml
.github/workflows/: build-aec3-arm64.yml  diag-archive-members.yml  produce-prebuilt.yml  prove-shim-link.yml  seal-capture.yml  vendor-assemble.yml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  aec3_shim.cpp
android/src/main/kotlin/com/sixpages/six_pages_voice/: CallConnectionService.kt  CallConnectionService.kt.rawapi_superseded  SixPagesVoicePlugin.kt  TelecomCompileCanary.kt  TelecomProbe.kt  VoiceSessionService.kt
android/src/test/kotlin/com/sixpages/six_pages_voice/: SixPagesVoicePluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/sixpages/six_pages_voice_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: six_pages_voice.podspec
ios/six_pages_voice/: Package.swift
ios/six_pages_voice/Sources/six_pages_voice/: SixPagesVoicePlugin.swift
lib/: six_pages_voice.dart  six_pages_voice_method_channel.dart  six_pages_voice_platform_interface.dart
test/: six_pages_voice_method_channel_test.dart  six_pages_voice_test.dart
